--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-server.port=8081
+server.port=8080
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.application.name=Bootstrap Spring Boot
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.username=root
+spring.datasource.password=Password123!
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql: true
