--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.servlet.multipart.max-request-size=10MB
 spring.application.name=Bootstrap Spring Boot
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.idle-timeout=30000
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=Password123!
