--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.application.name=Bootstrap Spring Boot
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.max-lifetime=1800000
