--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.application.name=Bootstrap Spring Boot
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.tomcat.initSQL = SET NAMES 'utf8mb4'
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.idle-timeout=30000
