--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.thymeleaf.suffix=.html
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.application.name=Bootstrap Spring Boot
+spring.jpa.database-platform=raf.sollecito.config.MySQL55DialectUtf8mb4
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
